# Shelly

./: CHANGELOG.md  CLAUDE.md  GEMINI.md  README.md  app.config.ts  package.json  theme.config.ts
lib/: theme.ts  (+24 more)
modules/terminal-emulator/android/: CMakeLists.txt
modules/terminal-emulator/android/src/main/: AndroidManifest.xml
modules/terminal-emulator/android/src/main/assets/: shelly-doctor.js  shelly-runtime-update.js
modules/terminal-emulator/android/src/main/java/com/termux/terminal/: TerminalEmulator.java  TerminalRow.java  TerminalSession.java
modules/terminal-emulator/android/src/main/java/expo/modules/terminalemulator/: AgentAlarmReceiver.kt  HomeInitializer.kt  LibExtractor.kt  ShellyTerminalSession.kt  TerminalEmulatorModule.kt
modules/terminal-emulator/android/src/main/java/expo/modules/terminalemulator/scouter/: CodexScreenInspect.kt  EventNormalizer.kt  JsonlSessionParser.kt  JsonlWatcher.kt  NotificationDispatcher.kt  ScouterCodexPet.kt  ScouterLifecycleService.kt  ScouterModels.kt  ScouterStateStore.kt  ScouterSystemSampler.kt  (+2 more)
modules/terminal-emulator/android/src/main/jni/: exec-wrapper-musl.c  exec-wrapper.c  shelly-pty.c  shelly-shell-launcher.c  shelly-xdg-open.c
modules/terminal-emulator/android/src/main/res/drawable/: scouter_ask_pill_bg.xml  scouter_badge_bg.xml  scouter_widget_bg.xml
modules/terminal-emulator/android/src/main/res/layout/: scouter_widget_medium.xml
modules/terminal-emulator/android/src/main/res/values/: scouter_strings.xml  styles.xml
modules/terminal-emulator/android/src/main/res/xml/: scouter_widget_info.xml
(+76 files in other folders)
